--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -6,7 +6,7 @@ services:
       repo: AxsolTools/locked
       branch: main
       deploy_on_push: true
-    build_command: npm install --legacy-peer-deps && npm run build
+    build_command: npm install --legacy-peer-deps --include=dev && npm run build
     run_command: node dist/index.js
     environment_slug: node-js
     instance_count: 1
@@ -15,6 +15,10 @@ services:
     envs:
       - key: NODE_ENV
         value: production
+        scope: RUN_TIME
+      - key: NPM_CONFIG_PRODUCTION
+        value: "false"
+        scope: BUILD_TIME
       - key: PORT
         value: "5000"
       - key: SOLANA_RPC_URLS
