--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -6,7 +6,7 @@ services:
       repo: AxsolTools/locked
       branch: main
       deploy_on_push: true
-    build_command: npm install --legacy-peer-deps --include=dev && npm run build
+    build_command: rm -rf node_modules package-lock.json && npm install && npm run build
     run_command: node dist/index.js
     environment_slug: node-js
     instance_count: 1
