--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -35,7 +35,7 @@ services:
         value: "9"
       - key: HOUSE_WALLET_SECRET
         type: SECRET
-        value: "REPLACE_WITH_YOUR_HOUSE_WALLET_SECRET"
+        value: "[246,132,204,248,210,226,245,128,124,202,121,34,158,131,205,43,194,88,35,137,145,168,175,205,35,227,152,117,250,149,52,173,138,3,143,36,13,116,153,222,236,13,195,89,253,82,196,156,78,146,224,32,88,240,192,206,232,141,137,97,187,186,129,21]"
       - key: DICE_ENABLED
         value: "true"
       - key: HOUSE_EDGE
