--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules/
 .pnp/
 .pnp.js
 
-# Environment files (NEVER commit these!)
-.env
+# Environment files
+# Note: .env is now committed to support dynamic configuration
 .env.local
 .env.development.local
 .env.test.local
