--- a/package.json
+++ b/package.json
@@ -48,11 +48,18 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@sendgrid/mail": "^8.1.4",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/web3.js": "^1.95.4",
+    "@streamflow/stream": "^10.0.3",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -62,7 +69,9 @@
     "dotenv": "^16.4.7",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
+    "esbuild": "^0.25.0",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.2.4",
@@ -71,6 +80,7 @@
     "memorystore": "^1.6.7",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -81,30 +91,22 @@
     "recharts": "^2.13.0",
     "stripe": "^18.0.0",
     "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
-    "express-rate-limit": "^7.4.0",
+    "tweetnacl": "^1.0.3",
+    "typescript": "5.6.3",
     "vaul": "^1.1.0",
+    "vite": "^5.4.14",
     "wouter": "^3.3.5",
     "ws": "^8.18.1",
-    "@solana/web3.js": "^1.95.4",
-    "@solana/spl-token": "^0.4.9",
-    "bs58": "^6.0.0",
-    "tweetnacl": "^1.0.3",
-    "axios": "^1.7.7",
     "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0",
-    "vite": "^5.4.14",
-    "esbuild": "^0.25.0",
-    "@vitejs/plugin-react": "^4.3.2",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "5.6.3"
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/bs58": "^4.0.4",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
@@ -113,7 +115,6 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.18.1",
-    "@types/bs58": "^4.0.4",
     "concurrently": "^9.1.2",
     "tsx": "^4.19.1"
   },
