--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@solana/web3.js": "^1.95.4",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.0.0",
+    "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-query": "^5.60.5",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
